refactor: GetMemberIdeaResponse에 Option 컬럼 추가