@@ -2,14 +2,18 @@ package kr.co.conceptbe.member.application;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import kr.co.conceptbe.auth.presentation.dto.AuthCredentials;
 import kr.co.conceptbe.bookmark.Bookmark;
 import kr.co.conceptbe.bookmark.repository.BookmarkRepository;
 import kr.co.conceptbe.idea.application.response.IdeaResponse;
+import kr.co.conceptbe.idea.domain.Idea;
 import kr.co.conceptbe.idea.domain.persistence.IdeaRepository;
 import kr.co.conceptbe.member.application.dto.GetMemberProfileResponse;
 import kr.co.conceptbe.member.application.dto.MemberIdeaResponse;
+import kr.co.conceptbe.member.application.dto.MemberIdeaResponseOption;
 import kr.co.conceptbe.member.domain.Member;
 import kr.co.conceptbe.member.persistence.MemberRepository;
 import lombok.RequiredArgsConstructor;
@@ -58,11 +62,33 @@ public class MemberService {
     }
 
     @Transactional(readOnly = true)
-    public List<MemberIdeaResponse> findMemberIdeas(AuthCredentials authCredentials, Pageable pageable) {
-        return ideaRepository.findAllByCreatorIdOrderByCreatedAtDesc(authCredentials.id(), pageable)
+    public List<MemberIdeaResponse> findMemberIdeas(AuthCredentials authCredentials, Long id, Pageable pageable) {
+        if (isMyMemberIdeas(authCredentials, id)) {
+            return ideaRepository.findAllByCreatorIdOrderByCreatedAtDesc(authCredentials.id(), pageable)
+                .stream()
+                .map(idea -> MemberIdeaResponse.ofMember(idea, MemberIdeaResponseOption.IS_MINE))
+                .toList();
+        }
+
+        return ideaRepository.findAllByCreatorIdOrderByCreatedAtDesc(id, pageable)
             .stream()
-            .map(MemberIdeaResponse::ofMember)
-            .toList();
+            .map(idea -> {
+                if (findGuestBookmarkedIdeaIds(authCredentials).contains(idea.getId())) {
+                    return MemberIdeaResponse.ofMember(idea, MemberIdeaResponseOption.IS_BOOKMARKED); 
+                }
+                return MemberIdeaResponse.ofMember(idea, MemberIdeaResponseOption.IS_NOT_BOOKMARKED);
+            }).collect(Collectors.toList());
+    }
+
+    private boolean isMyMemberIdeas(AuthCredentials authCredentials, Long id) {
+        return Objects.equals(id, authCredentials.id());
+    }
+
+    private Set<Long> findGuestBookmarkedIdeaIds(AuthCredentials authCredentials) {
+        Member guest = memberRepository.getById(authCredentials.id());
+        return guest.getBookmarks().stream()
+            .map(bookmark -> bookmark.getIdea().getId())
+            .collect(Collectors.toSet());
     }
 
     @Transactional(readOnly = true)
